# Deskulpt

./: .gitignore  .knip.json  .oxlintrc.json  .prettierignore  AGENTS.md  Cargo.toml  README.md  cliff.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rustfmt.toml  tsconfig.base.json  tsconfig.json  vite-env.d.ts  vite.config.ts  vitest.config.ts  vitest.setup.ts
.cargo/: config.toml
.github/: dependabot.yaml
.github/actions/setup-node/: action.yaml
.github/actions/setup-rust/: action.yaml
.github/workflows/: cache-warmup.yaml  ci.yaml  docs.yaml  lint-pr-title.yaml  release.yaml  rustdoc.yaml
crates/deskulpt/: Cargo.toml  tauri.conf.json
crates/deskulpt-build/: Cargo.toml
crates/deskulpt-build/src/: lib.rs
crates/deskulpt-common/: Cargo.toml
crates/deskulpt-common/src/: bindings.rs  event.rs  init.rs  lib.rs  outcome.rs  ser_error.rs  window.rs
crates/deskulpt-common/tests/: mod.rs  test_bindings_builder.rs  test_outcome.rs
crates/deskulpt-core/: Cargo.toml  build.rs
crates/deskulpt-core/src/: canvas_imode.rs  config.rs  events.rs  lib.rs  logging.rs  observability.rs  path.rs  shortcuts.rs  tray.rs
crates/deskulpt-core/src/bundler/: mod.rs
crates/deskulpt-core/src/commands/: bundle_widgets.rs  call_plugin.rs  complete_setup.rs  logging.rs  logs.rs  mod.rs  open.rs  open_widget.rs  refresh_all_widgets.rs  refresh_widget.rs  refresh_widgets_all.rs  rescan_widgets.rs  update_settings.rs
crates/deskulpt-core/src/logging/: mod.rs
crates/deskulpt-core/src/plugin/: loader.rs  manager.rs  mod.rs
crates/deskulpt-core/src/settings/: mod.rs  persistence.rs  shortcuts.rs
crates/deskulpt-core/src/states/: canvas_imode.rs  logging.rs  mod.rs  settings.rs  setup.rs  widget_catalog.rs  widgets.rs
crates/deskulpt-core/src/window/: canvas.js  manager.js  mod.rs  mouse_interaction.rs  script.rs
crates/deskulpt-logs/: Cargo.toml  build.rs
crates/deskulpt-logs/src/: commands.rs  lib.rs  manager.rs  reader.rs
crates/deskulpt-macros/: Cargo.toml
crates/deskulpt-macros/src/: event.rs  lib.rs
crates/deskulpt-manifest/: Cargo.toml
crates/deskulpt-manifest/src/: lib.rs
crates/deskulpt-observability/: Cargo.toml  README.md
crates/deskulpt-observability/src/: lib.rs  log_file.rs
crates/deskulpt-plugin/: Cargo.toml
crates/deskulpt-plugin-fs/: Cargo.toml
crates/deskulpt-plugin-fs/src/: lib.rs
crates/deskulpt-plugin-fs/tests/: test_append_file.rs  test_create_dir.rs  test_exists.rs  test_is_dir.rs  test_is_file.rs  test_read_file.rs  test_remove_dir.rs  test_remove_file.rs  test_write_file.rs
crates/deskulpt-plugin-macros/: Cargo.toml
crates/deskulpt-plugin-macros/src/: dispatch.rs  lib.rs
crates/deskulpt-plugin-sys/: Cargo.toml
crates/deskulpt-plugin-sys/src/: lib.rs
crates/deskulpt-plugin-sys/tests/: mod.rs  test_get_system_info.rs
crates/deskulpt-plugin/src/: abi.rs  command.rs  engine.rs  interface.rs  lib.rs  plugin.rs  registry.rs
crates/deskulpt-plugin/tests/: mod.rs  test_call_plugin.rs
crates/deskulpt-registry/: Cargo.toml  build.rs
crates/deskulpt-registry/src/: index.rs  lib.rs  manager.rs  widget.rs
crates/deskulpt-settings/: Cargo.toml  README.md  build.rs
crates/deskulpt-settings/src/: commands.rs  events.rs  hooks.rs  lib.rs  manager.rs  model.rs  persistence.rs  settings.rs  types.rs  worker.rs
crates/deskulpt-widgets/: Cargo.toml  README.md  build.rs
crates/deskulpt-widgets/permissions/autogenerated/: reference.md
crates/deskulpt-widgets/permissions/autogenerated/commands/: bundle.toml  rescan.toml
crates/deskulpt-widgets/permissions/schemas/: schema.json
crates/deskulpt-widgets/src/: bundler.rs  catalog.rs  commands.rs  config.rs  events.rs  lib.rs  manager.rs  manifest.rs  manifests.rs  model.rs  persist.rs  refresh.rs  registry.rs  render.rs  rescan.rs  settings.rs  setup.rs  starter.rs  state.rs
crates/deskulpt-widgets/src/catalog/: manifests.rs
crates/deskulpt-widgets/src/manifest/: load.rs  node.rs  widget.rs
crates/deskulpt-widgets/src/registry/: index.rs  widget.rs
crates/deskulpt-widgets/src/render/: bundler.rs  worker.rs
crates/deskulpt-widgets/starter/welcome/: deskulpt.widget.json  index.tsx
crates/deskulpt-workspace/: Cargo.toml
crates/deskulpt-workspace/src/: lib.rs
crates/deskulpt/capabilities/: canvas.json  manager.json  portal.json
crates/deskulpt/src/: lib.rs  logging.rs
crates/tauri-deskulpt-build/: Cargo.toml
crates/tauri-deskulpt-build/src/: lib.rs
crates/tauri-plugin-deskulpt-core/: Cargo.toml  build.rs
crates/tauri-plugin-deskulpt-core/src/: events.rs  shortcuts.rs  tray.rs
crates/tauri-plugin-deskulpt-logs/: Cargo.toml  README.md  build.rs
crates/tauri-plugin-deskulpt-logs/src/: commands.rs  reader.rs
crates/tauri-plugin-deskulpt-settings/: Cargo.toml  README.md  build.rs
crates/tauri-plugin-deskulpt-settings/src/: manager.rs  model.rs  worker.rs
crates/tauri-plugin-deskulpt-widgets/: Cargo.toml  build.rs
crates/tauri-plugin-deskulpt-widgets/src/: commands.rs  manager.rs  persist.rs
crates/xtask-gen/: Cargo.toml
crates/xtask-gen/src/: bindings.rs  bindings.ts.hbs  ci.rs  main.rs  schema.rs  whatsnew.md.hbs  whatsnew.rs
docs/: package.json  source.config.ts  tsconfig.json  vite.config.ts  vite.plugin-llm-docs.ts
docs/.vitepress/: config.ts
docs/content/docs/: meta.json
docs/content/releases/: 0.1.0.mdx  0.2.0.mdx  0.3.0.mdx
docs/src/: route-tree.gen.ts  router.tsx
docs/src/components/: logos.tsx  not-found.tsx  page-actions.tsx  page-footer.tsx  search.tsx
docs/src/contribute/: documentation.md  quality-assurance.md
docs/src/guide/: create-your-first-widget.md  distributing-your-widget.md  first-launch.md  installation.md  introduction.md  manager.md
docs/src/lib/: download-options.ts  layout.shared.tsx  source.ts
docs/whatsnew/: v0.1.0.md  v0.2.0.md  v0.3.0.md
public/schemas/: settings-schema.json
resources/schema/: settings.json  widgets.json
xtask/: Cargo.toml  README.md
xtask/src/: bindings.rs  main.rs  schema.rs
xtask/src/bindings/: index.rs  index.ts.hbs  module.rs  module.ts.hbs
(+75 files in other folders)
