[workspace]
members  = ["crates/*", "xtask"]
resolver = "2"

[workspace.package]
authors    = ["The Deskulpt Development Team"]
edition    = "2024"
homepage   = "https://deskulpt-apps.github.io/"
license    = "MIT"
repository = "https://github.com/deskulpt-apps/Deskulpt"
version    = "0.3.0"

[workspace.dependencies]
anyhow                         = "1.0.100"
astral-tokio-tar               = "0.5.6"
async-compression              = "0.4.37"
clap                           = "4.5.54"
copy_dir                       = "0.1.3"
dunce                          = "1.0.5"
either                         = "1.15.0"
global-mousemove               = "0.1.1"
handlebars                     = "6.4.0"
heck                           = "0.5.0"
oci-client                     = "0.15.0"
once_cell                      = "1.21.3"
open                           = "5.3.3"
parking_lot                    = "0.12.5"
quote                          = "1.0.44"
regex                          = "1.12.2"
reqwest                        = "0.13.1"
rolldown                       = "0.1.0"
rolldown_common                = "0.1.0"
schemars                       = "1.2.0"
seqlock                        = "0.2.0"
serde                          = "1.0.228"
serde_json                     = "1.0.149"
serde_with                     = "3.16.1"
serialize-to-javascript        = "0.1.1"
specta                         = "2.0.0-rc.22"
specta-typescript              = "0.0.9"
syn                            = "2.0.114"
tauri                          = "2.9.5"
tauri-build                    = "2.5.2"
tauri-plugin                   = "2.5.2"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-global-shortcut   = "2.3.1"
tauri-plugin-opener            = "2.5.3"
tokio                          = "1.49.0"
tokio-util                     = "0.7.18"
tracing                        = "0.1.44"
tracing-appender               = "0.2.4"
tracing-panic                  = "0.1.2"
tracing-subscriber             = "0.3.21"
url                            = "2.5.8"

# Deskulpt crates
deskulpt-build         = { version = "0.3.0", path = "crates/deskulpt-build" }
deskulpt-common        = { version = "0.3.0", path = "crates/deskulpt-common" }
deskulpt-core          = { version = "0.3.0", path = "crates/deskulpt-core" }
deskulpt-logs          = { version = "0.3.0", path = "crates/deskulpt-logs" }
deskulpt-macros        = { version = "0.3.0", path = "crates/deskulpt-macros" }
deskulpt-manifest      = { version = "0.3.0", path = "crates/deskulpt-manifest" }
deskulpt-plugin        = { version = "0.3.0", path = "crates/deskulpt-plugin" }
deskulpt-plugin-macros = { version = "0.3.0", path = "crates/deskulpt-plugin-macros" }
deskulpt-registry      = { version = "0.3.0", path = "crates/deskulpt-registry" }
deskulpt-settings      = { version = "0.3.0", path = "crates/deskulpt-settings" }
deskulpt-widgets       = { version = "0.3.0", path = "crates/deskulpt-widgets" }
deskulpt-workspace     = { version = "0.3.0", path = "crates/deskulpt-workspace" }

# TODO: Remove these since they will not be dependencies of other crates when finalized
deskulpt-plugin-fs  = { version = "0.3.0", path = "crates/deskulpt-plugin-fs" }
deskulpt-plugin-sys = { version = "0.3.0", path = "crates/deskulpt-plugin-sys" }
sysinfo             = "0.38.0"

[profile.dev]
debug = "line-tables-only"

[profile.test]
debug = "line-tables-only"

[profile.release]
codegen-units = 1
lto           = "fat"
opt-level     = "s"
panic         = "abort"
strip         = true
