[package]
description = "Deskulpt manifest definitions."
name        = "deskulpt-manifest"

authors    = { workspace = true }
edition    = { workspace = true }
homepage   = { workspace = true }
license    = { workspace = true }
repository = { workspace = true }
version    = { workspace = true }

[dependencies]
anyhow     = { workspace = true }
serde      = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
specta     = { workspace = true }

[package.metadata.docs.rs]
rustdoc-args = ["--document-private-items"]
