[package]
description = "Observability, logging, and crash reporting for Deskulpt"
name        = "deskulpt-observability"

authors    = { workspace = true }
edition    = { workspace = true }
homepage   = { workspace = true }
license    = { workspace = true }
repository = { workspace = true }
version    = { workspace = true }

[dependencies]
anyhow     = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
tokio      = { workspace = true, features = ["full"] }

tracing            = "0.1.41"
tracing-appender   = "0.2.3"
tracing-subscriber = "0.3.19"

sentry = { version = "0.35.0", features = ["tracing"] }

tempfile = "3.14.0"
time     = { version = "0.3.36", features = ["formatting", "macros"] }
