[package]
description = "Deskulpt widgets management."
links       = "deskulpt-widgets"
name        = "deskulpt-widgets"

authors    = { workspace = true }
edition    = { workspace = true }
homepage   = { workspace = true }
license    = { workspace = true }
repository = { workspace = true }
version    = { workspace = true }

[dependencies]
anyhow            = { workspace = true }
bitflags          = { workspace = true }
copy_dir          = { workspace = true }
deskulpt-common   = { workspace = true }
deskulpt-core     = { workspace = true }
deskulpt-settings = { workspace = true }
either            = { workspace = true }
itertools         = { workspace = true }
parking_lot       = { workspace = true }
rolldown          = { workspace = true }
rolldown_common   = { workspace = true }
serde             = { workspace = true, features = ["derive"] }
serde_json        = { workspace = true }
specta            = { workspace = true, features = ["derive", "function", "serde_json"] }
tauri             = { workspace = true, features = ["specta"] }
tokio             = { workspace = true }

[build-dependencies]
deskulpt-build = { workspace = true }

[package.metadata.docs.rs]
rustdoc-args = ["--document-private-items"]
