[package]
description = "Deskulpt widgets management."
links       = "deskulpt-widgets"
name        = "deskulpt-widgets"

authors    = { workspace = true }
edition    = { workspace = true }
homepage   = { workspace = true }
license    = { workspace = true }
repository = { workspace = true }
version    = { workspace = true }

[dependencies]
anyhow            = { workspace = true }
copy_dir          = { workspace = true }
deskulpt-common   = { workspace = true }
deskulpt-manifest = { workspace = true }
deskulpt-registry = { workspace = true }
deskulpt-settings = { workspace = true }
dunce             = { workspace = true }
either            = { workspace = true }
parking_lot       = { workspace = true }
rolldown          = { workspace = true }
rolldown_common   = { workspace = true }
schemars          = { workspace = true }
serde             = { workspace = true, features = ["derive"] }
serde_with        = { workspace = true }
specta            = { workspace = true, features = ["derive", "function", "serde_json"] }
tauri             = { workspace = true, features = ["specta"] }
tokio             = { workspace = true }
tracing           = { workspace = true }

[build-dependencies]
deskulpt-build = { workspace = true }

[package.metadata.docs.rs]
rustdoc-args = ["--document-private-items"]
