[package]
description = "Workspace utilities for Deskulpt."
name        = "deskulpt-workspace"

authors    = { workspace = true }
edition    = { workspace = true }
homepage   = { workspace = true }
license    = { workspace = true }
repository = { workspace = true }
version    = { workspace = true }

[package.metadata.docs.rs]
rustdoc-args = ["--document-private-items"]
